# eli5-now

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  llm.py  main.py  messages.py
backend/app/agents/: eli.py
backend/app/routes/: ask.py  transcribe.py  tts.py
backend/app/streaming/: __init__.py  events.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_messages.py  test_routes.py  test_streaming.py  test_transcribe.py  test_tts.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/components/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  SettingsPanel.tsx
frontend/src/hooks/: useSettings.ts  useTTS.ts  useVoiceInput.ts  useWebSpeech.ts  useWhisper.ts
frontend/src/hooks/__tests__/: useSettings.test.ts  useWhisper.test.ts
frontend/src/lib/: api.ts
